posted a consolidated merged dataset

--- a/data_format1/data_filtering.ipynb
+++ b/data_format1/data_filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c46ef58c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bb5917c7",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "[6549 rows x 7 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "f07988a5",
    "metadata": {},
    "outputs": [],
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "16ca86ce",
    "metadata": {},
    "outputs": [
@@ -2057,7 +2057,7 @@
        "[6549 rows x 9 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,6 +2065,232 @@
    "source": [
     "# merged dataset of log and the corresponding user info\n",
     "merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bb20421c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged.to_csv(\"use_data/merged_dataset.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1b173b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>cat_id</th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>brand_id</th>\n",
+       "      <th>time_stamp</th>\n",
+       "      <th>action_type</th>\n",
+       "      <th>age_range</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>149002</td>\n",
+       "      <td>282</td>\n",
+       "      <td>885</td>\n",
+       "      <td>3791</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>149002</td>\n",
+       "      <td>282</td>\n",
+       "      <td>885</td>\n",
+       "      <td>3791</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1107</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>109881</td>\n",
+       "      <td>230</td>\n",
+       "      <td>629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1662.0</td>\n",
+       "      <td>820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>109881</td>\n",
+       "      <td>230</td>\n",
+       "      <td>629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1662.0</td>\n",
+       "      <td>820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>109881</td>\n",
+       "      <td>230</td>\n",
+       "      <td>629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1662.0</td>\n",
+       "      <td>820</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6544</th>\n",
+       "      <td>73105</td>\n",
+       "      <td>259</td>\n",
+       "      <td>614</td>\n",
+       "      <td>637</td>\n",
+       "      <td>2603.0</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6545</th>\n",
+       "      <td>403421</td>\n",
+       "      <td>175</td>\n",
+       "      <td>1181</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6546</th>\n",
+       "      <td>116738</td>\n",
+       "      <td>186</td>\n",
+       "      <td>267</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>2276.0</td>\n",
+       "      <td>1110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6547</th>\n",
+       "      <td>116738</td>\n",
+       "      <td>186</td>\n",
+       "      <td>267</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>2276.0</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6548</th>\n",
+       "      <td>124951</td>\n",
+       "      <td>184</td>\n",
+       "      <td>656</td>\n",
+       "      <td>145</td>\n",
+       "      <td>3462.0</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6549 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      user_id  item_id  cat_id  seller_id  brand_id  time_stamp  action_type  \\\n",
+       "0      149002      282     885       3791    1500.0        1111            0   \n",
+       "1      149002      282     885       3791    1500.0        1107            0   \n",
+       "2      109881      230     629          1    1662.0         820            0   \n",
+       "3      109881      230     629          1    1662.0         820            0   \n",
+       "4      109881      230     629          1    1662.0         820            0   \n",
+       "...       ...      ...     ...        ...       ...         ...          ...   \n",
+       "6544    73105      259     614        637    2603.0        1111            0   \n",
+       "6545   403421      175    1181       4760     247.0        1111            0   \n",
+       "6546   116738      186     267       1200    2276.0        1110            0   \n",
+       "6547   116738      186     267       1200    2276.0        1101            0   \n",
+       "6548   124951      184     656        145    3462.0        1111            0   \n",
+       "\n",
+       "      age_range  gender  \n",
+       "0           5.0     2.0  \n",
+       "1           5.0     2.0  \n",
+       "2           4.0     0.0  \n",
+       "3           4.0     0.0  \n",
+       "4           4.0     0.0  \n",
+       "...         ...     ...  \n",
+       "6544        2.0     0.0  \n",
+       "6545        3.0     1.0  \n",
+       "6546        2.0     1.0  \n",
+       "6547        2.0     1.0  \n",
+       "6548        0.0     0.0  \n",
+       "\n",
+       "[6549 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdf = pd.read_csv(\"use_data/merged_dataset.csv\")\n",
+    "mdf"
    ]
   },
   {
