Started PCA Process
PCA notebook added, performs the described PCA process from Rahul's lab lecture

--- a/EDA/initial_EDA_feature_recode.ipynb
+++ b/EDA/initial_EDA_feature_recode.ipynb
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {
     "id": "yYJBuj2wkq9M"
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1395,54 +1395,99 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>108672</td>\n",
-       "      <td>4760</td>\n",
+       "      <td>34176</td>\n",
+       "      <td>3906</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6018</td>\n",
-       "      <td>145</td>\n",
+       "      <td>34176</td>\n",
+       "      <td>121</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>134532</td>\n",
-       "      <td>3323</td>\n",
+       "      <td>34176</td>\n",
+       "      <td>4356</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>340104</td>\n",
-       "      <td>3263</td>\n",
+       "      <td>34176</td>\n",
+       "      <td>2217</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>367500</td>\n",
-       "      <td>4405</td>\n",
+       "      <td>230784</td>\n",
+       "      <td>4818</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260859</th>\n",
+       "      <td>359807</td>\n",
+       "      <td>4325</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260860</th>\n",
+       "      <td>294527</td>\n",
+       "      <td>3971</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260861</th>\n",
+       "      <td>294527</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260862</th>\n",
+       "      <td>294527</td>\n",
+       "      <td>2537</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260863</th>\n",
+       "      <td>229247</td>\n",
+       "      <td>4140</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>260864 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   user_id  merchant_id  label\n",
-       "0   108672         4760      0\n",
-       "1     6018          145      0\n",
-       "2   134532         3323      1\n",
-       "3   340104         3263      0\n",
-       "4   367500         4405      0"
+       "        user_id  merchant_id  label\n",
+       "0         34176         3906      0\n",
+       "1         34176          121      0\n",
+       "2         34176         4356      1\n",
+       "3         34176         2217      0\n",
+       "4        230784         4818      0\n",
+       "...         ...          ...    ...\n",
+       "260859   359807         4325      0\n",
+       "260860   294527         3971      0\n",
+       "260861   294527          152      0\n",
+       "260862   294527         2537      0\n",
+       "260863   229247         4140      0\n",
+       "\n",
+       "[260864 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_format.head()"
+    "train_format"
    ]
   },
   {
@@ -1662,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
