Consolidation; PCA redo
Consolidated avg age/gender and percent repeat buyer notebooks into just Feature Engineering PCA. values were appended to merged dataset and PCA was performed

--- a/data_format1/User Log And Info Visualization.ipynb
+++ b/data_format1/User Log And Info Visualization.ipynb
@@ -662,10 +662,7 @@
     }
    ],
    "source": [
-    "user_id = df2['user_id']\n",
-    "user_id.to_numpy()\n",
-    "user_id_count = count(user_id)\n",
-    "plt.bar(user_id_count.keys(),user_id_count.values(),width=1)"
+    "df2['user_id'].plot(kind=\"hist\")"
    ]
   },
   {
