Expanded Testing/Training
Created .csv files for an expanded testing and training files based on the features.pdf document

--- a/data_format1/Feature Engineering PCA.ipynb
+++ b/data_format1/Feature Engineering PCA.ipynb
@@ -7,52 +7,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  error: subprocess-exited-with-error\n",
-      "  \n",
-      "  python setup.py egg_info did not run successfully.\n",
-      "  exit code: 1\n",
-      "  \n",
-      "  [8 lines of output]\n",
-      "  Traceback (most recent call last):\n",
-      "    File \"<string>\", line 2, in <module>\n",
-      "    File \"<pip-setuptools-caller>\", line 34, in <module>\n",
-      "    File \"C:\\Users\\sonic\\AppData\\Local\\Temp\\pip-install-htkvaz15\\sklearn_ebb402f4e2d54ad594d77904fe1f5972\\setup.py\", line 10, in <module>\n",
-      "      LONG_DESCRIPTION = f.read()\n",
-      "    File \"C:\\Users\\sonic\\anaconda3\\lib\\encodings\\cp1252.py\", line 23, in decode\n",
-      "      return codecs.charmap_decode(input,self.errors,decoding_table)[0]\n",
-      "  UnicodeDecodeError: 'charmap' codec can't decode byte 0x8f in position 7: character maps to <undefined>\n",
-      "  [end of output]\n",
-      "  \n",
-      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "error: metadata-generation-failed\n",
-      "\n",
-      "Encountered error while generating package metadata.\n",
-      "\n",
-      "See above for output.\n",
-      "\n",
-      "note: This is an issue with the package mentioned above, not pip.\n",
-      "hint: See above for details.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sklearn\n",
-      "  Using cached sklearn-0.0.post4.tar.gz (3.6 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'error'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install shap\n",
-    "!pip install sklearn\n",
+    "#!pip install sklearn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import shap\n",
@@ -688,7 +646,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x255400c7190>]"
+       "[<matplotlib.lines.Line2D at 0x1b9f8df00d0>]"
       ]
      },
      "execution_count": 7,
@@ -719,7 +677,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2554010c6a0>]"
+       "[<matplotlib.lines.Line2D at 0x1b9f8e24c70>]"
       ]
      },
      "execution_count": 8,
@@ -1576,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6b924bea",
    "metadata": {},
    "outputs": [
@@ -1612,8 +1570,8 @@
        "      <th>gender</th>\n",
        "      <th>avg_age</th>\n",
        "      <th>avg_gender</th>\n",
-       "      <th>% repeat age</th>\n",
        "      <th>% repeat gender</th>\n",
+       "      <th>% repeat age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1630,8 +1588,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1646,8 +1604,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1662,8 +1620,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1678,8 +1636,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.61</td>\n",
        "      <td>0.16</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1694,8 +1652,8 @@
        "      <td>1.0</td>\n",
        "      <td>4.28</td>\n",
        "      <td>0.42</td>\n",
-       "      <td>0.05</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1726,8 +1684,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.31</td>\n",
        "      <td>0.54</td>\n",
-       "      <td>0.05</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6544</th>\n",
@@ -1742,8 +1700,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.02</td>\n",
        "      <td>0.22</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6545</th>\n",
@@ -1774,8 +1732,8 @@
        "      <td>1.0</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6547</th>\n",
@@ -1790,8 +1748,8 @@
        "      <td>1.0</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1812,23 +1770,23 @@
        "6546   116738      186     267       1200    2276.0        1110            0   \n",
        "6547   116738      186     267       1200    2276.0        1101            0   \n",
        "\n",
-       "      age_range  gender  avg_age  avg_gender  % repeat age  % repeat gender  \n",
-       "2           4.0     0.0     3.89        0.17          0.23             0.27  \n",
-       "3           4.0     0.0     3.89        0.17          0.23             0.27  \n",
-       "4           4.0     0.0     3.89        0.17          0.23             0.27  \n",
-       "5           6.0     0.0     3.61        0.16          0.00             0.27  \n",
-       "6           5.0     1.0     4.28        0.42          0.05             0.73  \n",
-       "...         ...     ...      ...         ...           ...              ...  \n",
-       "6543        5.0     0.0     3.31        0.54          0.05             0.27  \n",
-       "6544        2.0     0.0     3.02        0.22          0.00             0.27  \n",
-       "6545        3.0     1.0     3.31        0.54          0.73             0.73  \n",
-       "6546        2.0     1.0     3.50        0.25          0.00             0.73  \n",
-       "6547        2.0     1.0     3.50        0.25          0.00             0.73  \n",
+       "      age_range  gender  avg_age  avg_gender  % repeat gender  % repeat age  \n",
+       "2           4.0     0.0     3.89        0.17             0.27          0.23  \n",
+       "3           4.0     0.0     3.89        0.17             0.27          0.23  \n",
+       "4           4.0     0.0     3.89        0.17             0.27          0.23  \n",
+       "5           6.0     0.0     3.61        0.16             0.27          0.00  \n",
+       "6           5.0     1.0     4.28        0.42             0.73          0.05  \n",
+       "...         ...     ...      ...         ...              ...           ...  \n",
+       "6543        5.0     0.0     3.31        0.54             0.27          0.05  \n",
+       "6544        2.0     0.0     3.02        0.22             0.27          0.00  \n",
+       "6545        3.0     1.0     3.31        0.54             0.73          0.73  \n",
+       "6546        2.0     1.0     3.50        0.25             0.73          0.00  \n",
+       "6547        2.0     1.0     3.50        0.25             0.73          0.00  \n",
        "\n",
        "[5174 rows x 13 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "9dd77283",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1814,7 @@
        "'\\nRECAP\\navg_age: average age for that item id\\navg_gender: average gender for that item id\\n% repeat age: Percentage chance that user will be a repeat buyer by their age\\n% repeat gender: Percentage chance that user will be a repeat buyer by their gender\\n'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "77f7039b",
    "metadata": {},
    "outputs": [
@@ -1902,8 +1860,8 @@
        "      <th>gender</th>\n",
        "      <th>avg_age</th>\n",
        "      <th>avg_gender</th>\n",
-       "      <th>% repeat age</th>\n",
        "      <th>% repeat gender</th>\n",
+       "      <th>% repeat age</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1913,8 +1871,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1922,8 +1880,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1931,8 +1889,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.89</td>\n",
        "      <td>0.17</td>\n",
-       "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1940,8 +1898,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.61</td>\n",
        "      <td>0.16</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1949,8 +1907,8 @@
        "      <td>1.0</td>\n",
        "      <td>4.28</td>\n",
        "      <td>0.42</td>\n",
-       "      <td>0.05</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1967,8 +1925,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.31</td>\n",
        "      <td>0.54</td>\n",
-       "      <td>0.05</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6544</th>\n",
@@ -1976,8 +1934,8 @@
        "      <td>0.0</td>\n",
        "      <td>3.02</td>\n",
        "      <td>0.22</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.27</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6545</th>\n",
@@ -1994,8 +1952,8 @@
        "      <td>1.0</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6547</th>\n",
@@ -2003,8 +1961,8 @@
        "      <td>1.0</td>\n",
        "      <td>3.50</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.73</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2012,23 +1970,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      age_range  gender  avg_age  avg_gender  % repeat age  % repeat gender\n",
-       "2           4.0     0.0     3.89        0.17          0.23             0.27\n",
-       "3           4.0     0.0     3.89        0.17          0.23             0.27\n",
-       "4           4.0     0.0     3.89        0.17          0.23             0.27\n",
-       "5           6.0     0.0     3.61        0.16          0.00             0.27\n",
-       "6           5.0     1.0     4.28        0.42          0.05             0.73\n",
-       "...         ...     ...      ...         ...           ...              ...\n",
-       "6543        5.0     0.0     3.31        0.54          0.05             0.27\n",
-       "6544        2.0     0.0     3.02        0.22          0.00             0.27\n",
-       "6545        3.0     1.0     3.31        0.54          0.73             0.73\n",
-       "6546        2.0     1.0     3.50        0.25          0.00             0.73\n",
-       "6547        2.0     1.0     3.50        0.25          0.00             0.73\n",
+       "      age_range  gender  avg_age  avg_gender  % repeat gender  % repeat age\n",
+       "2           4.0     0.0     3.89        0.17             0.27          0.23\n",
+       "3           4.0     0.0     3.89        0.17             0.27          0.23\n",
+       "4           4.0     0.0     3.89        0.17             0.27          0.23\n",
+       "5           6.0     0.0     3.61        0.16             0.27          0.00\n",
+       "6           5.0     1.0     4.28        0.42             0.73          0.05\n",
+       "...         ...     ...      ...         ...              ...           ...\n",
+       "6543        5.0     0.0     3.31        0.54             0.27          0.05\n",
+       "6544        2.0     0.0     3.02        0.22             0.27          0.00\n",
+       "6545        3.0     1.0     3.31        0.54             0.73          0.73\n",
+       "6546        2.0     1.0     3.50        0.25             0.73          0.00\n",
+       "6547        2.0     1.0     3.50        0.25             0.73          0.00\n",
        "\n",
        "[5174 rows x 6 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,29 +1998,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "0744ab59",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PCA(n_components=2)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pca = PCA(n_components=2)\n",
-    "pca.fit(df_age_gender)"
+    "principalComponents = pca.fit_transform(df_age_gender)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "22b3ddc2",
    "metadata": {},
    "outputs": [
@@ -2080,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "84782594",
    "metadata": {},
    "outputs": [
@@ -2095,6 +2042,14 @@
    "source": [
     "print(pca.singular_values_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5232203a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
