Fixed Expanded Files
index=False; now the files are in the right format

--- a/data_format1/Expanded Training And Testing Data.ipynb
+++ b/data_format1/Expanded Training And Testing Data.ipynb
@@ -845,13 +845,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "782412a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_testing.to_csv('expanded_testing.csv')\n",
-    "df_training.to_csv('expanded_training.csv')"
+    "df_testing.to_csv('expanded_testing.csv',index=False)\n",
+    "df_training.to_csv('expanded_training.csv',index=False)"
    ]
   },
   {
