--- a/data_format1/Merchant Profile.ipynb
+++ b/data_format1/Merchant Profile.ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "cb1a35ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFEATURES:\\nOverall action count/ratio\\nOverall day count\\nMonthly action count/ratio\\nProduct Diversity\\nPenetration\\nMonthly Aggregation\\nUser Aggregation\\nDouble 11 Features\\nLatest One-Week\\nTrend\\nRepeat Buyer Features\\nLDA Features\\nPCA Features\\nAge Related\\nGender Related\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,6 +25,21 @@
     "from sklearn.decomposition import PCA\n",
     "'''\n",
     "FEATURES:\n",
+    "Overall action count/ratio\n",
+    "Overall day count\n",
+    "Monthly action count/ratio\n",
+    "Product Diversity\n",
+    "Penetration\n",
+    "Monthly Aggregation\n",
+    "User Aggregation\n",
+    "Double 11 Features\n",
+    "Latest One-Week\n",
+    "Trend\n",
+    "Repeat Buyer Features\n",
+    "LDA Features\n",
+    "PCA Features\n",
+    "Age Related\n",
+    "Gender Related\n",
     "\n",
     "'''"
    ]
@@ -248,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c3f19134",
    "metadata": {},
    "outputs": [
@@ -343,7 +369,7 @@
        "[385 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
